<resources>
    <string name="app_name">TaskHub2</string>
    <string name="task_name">Name</string>
    <string name="task_creation_header">New task</string>
    <string name="task_description">Description</string>
    <string name="create_task_button">Create</string>
    <string name="login_via_google">Login via Google</string>
    <string name="task_title">Task name</string>
    <string name="submit_task">Submit</string>
    <string name="app_taskhub">TaskHub</string>
    <string name="create_task_text">Create Task</string>
    <string name="current_tasks_text">Current tasks</string>
    <string name="group_name_tv">Group Name</string>
    <string name="login_via_google_text">Login via Google</string>
    <string name="new_group">New group</string>
    <string name="group_name">Group name</string>
    <string name="group_s_bio">Group\'s bio</string>
    <string name="limit_of_members">Limit of members</string>
    <string name="error_sign_in">Failed or cancelled</string>
    <string name="signed_in">You are signed in</string>
    <string name="task_completed">Task Completed</string>
    <string name="edit_task">Edit task</string>
    <string name="take_this_task">Take this task</string>
    <string name="edit_task_header">Edit task</string>
    <string name="confirm_changes">Confirm changes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="main_menu">Main menu</string>
    <string name="groups">Groups</string>
    <string name="tasks">Tasks</string>
    <string name="members">Members</string>
    <string name="go_to_the_group">Enter</string>
    <string name="logout">Logout</string>
    <string name="create_new_group_or_join">Create new group or join</string>
    <string name="create_new_group">Create new group</string>
    <string name="join_group">Join group</string>
    <string name="logout_btn">Logout</string>
    <string name="options">Options</string>
    <string name="enter_the_group">Enter the group</string>
    <string name="enter_the_invite_code">Enter the invite code</string>
    <string name="enter">Enter</string>
    <string name="codegroup">c1o2odo3odeee</string>
    <string name="create_task">Create task</string>
    <string name="already_in_group">You already in this group!</string>
    <string name="to_many_group_users">To many users in group!</string>
    <string name="not_found_group">Not found group!</string>
    <string name="code_empty">Code is empty!</string>
</resources>